added setup.php, chose good limits for mobile sticker resize (incomplete)

--- a/todo
+++ b/todo
@@ -71,6 +71,9 @@ TODO
 + replace all object['property'] with object.property
 + think about not changing element while moving scroll when buttons are switched
 + make sure that you hide change sticker section when clear button is clicked or when all stickers are deleted one by one
++ consider moving sticker on mobile the way it doesn't cover change section
++ think what to do when resized element covers scrolls (limits issue)
++ consider removing change size button and all code related to it
 
 
 
@@ -89,12 +92,7 @@ TODO
 - replace let with const where possible
 - style reset password page
 - style home message container
-- choose good limits for sticker change functions, make sure that element moves smoothly
-- think what to do with element being resized when change size sticker is selected
-- think what to do when resized element covers scrolls (limits issue)
 - check why photos cannot be saved on remote hosting
-- consider removing change size button and all code related to it
-- consider moving sticker on mobile the way it doesn't cover change section
 
 
 
