initiated complete website styling

--- a/todo
+++ b/todo
@@ -81,6 +81,7 @@ TODO
 + move hostname and port to separate variable for emails to contain valid links
 + make Account::_prepareAndSendMain private
 + style reset password page
++ style 404 page
 
 
 
@@ -93,7 +94,6 @@ TODO
 - prettify everything
 - check if I need to use https://css-tricks.com/almanac/properties/t/text-transform/ anywhere
 - replace let with const where possible
-- style 404 page
 - style home message container
 - think if you should consider stickers with 0 width or height to be absent on photo in order not to be able to save it
 
