made home forms vrtical for error messages to be styled correctly

--- a/todo
+++ b/todo
@@ -98,6 +98,7 @@ TODO
 - think if you should consider stickers with 0 width or height to be absent on photo in order not to be able to save it
 
 - check if I can support emojy
+- limit comment length with 255 on server and client side
 - check why mobile photos are small
 - make inactive buttons grey
 - increase the size of like button
