--- a/todo
+++ b/todo
@@ -82,6 +82,7 @@ TODO
 + make Account::_prepareAndSendMain private
 + style reset password page
 + style 404 page
++ limit comment length with 255 on server and client side
 
 
 
@@ -98,7 +99,6 @@ TODO
 - think if you should consider stickers with 0 width or height to be absent on photo in order not to be able to save it
 
 - check if I can support emojy
-- limit comment length with 255 on server and client side
 - check why mobile photos are small
 - make inactive buttons grey
 - increase the size of like button
