--- a/todo
+++ b/todo
@@ -84,6 +84,7 @@ TODO
 + style 404 page
 + limit comment length with 255 on server and client side
 + check if I can support emojy
++ check why mobile photos are small
 
 
 
@@ -99,8 +100,5 @@ TODO
 - style home message container
 - think if you should consider stickers with 0 width or height to be absent on photo in order not to be able to save it
 
-- check why mobile photos are small
 - make inactive buttons grey
 - increase the size of like button
-
-// error_log("message");
