--- a/todo
+++ b/todo
@@ -85,6 +85,7 @@ TODO
 + limit comment length with 255 on server and client side
 + check if I can support emojy
 + check why mobile photos are small
++ make inactive buttons grey
 
 
 
@@ -100,5 +101,5 @@ TODO
 - style home message container
 - think if you should consider stickers with 0 width or height to be absent on photo in order not to be able to save it
 
-- make inactive buttons grey
+
 - increase the size of like button
