made comment input height increase when needed

--- a/todo
+++ b/todo
@@ -86,6 +86,7 @@ TODO
 + check if I can support emojy
 + check why mobile photos are small
 + make inactive buttons grey
++ make comment input height increase when comment text overflows it
 
 
 
@@ -101,5 +102,5 @@ TODO
 - style home message container
 - think if you should consider stickers with 0 width or height to be absent on photo in order not to be able to save it
 
-
 - increase the size of like button
+- make sure that comments go to new lines when they don't fit into photo containers
