increased the size of like button

--- a/todo
+++ b/todo
@@ -88,6 +88,7 @@ TODO
 + make inactive buttons grey
 + make comment input height increase when comment text overflows it
 + make sure that comments go to new lines when they don't fit into photo containers
++ increase the size of like button
 
 
 
@@ -103,4 +104,4 @@ TODO
 - style home message container
 - think if you should consider stickers with 0 width or height to be absent on photo in order not to be able to save it
 
-- increase the size of like button
+
