--- a/todo
+++ b/todo
@@ -101,4 +101,5 @@ TODO
 - replace let with const where possible
 - think if you should consider stickers with 0 width or height to be absent on photo in order not to be able to save it
 
-- check why picture isn't being saved on mobile
+- check why everything is slow
+- remove all unnecessary fonts
