deleted unused photos

--- a/todo
+++ b/todo
@@ -99,8 +99,8 @@ TODO
 
 
 
-- move website to free hosting
 - test everything
 - remove TODO
 - check everything using correction form
 - list all bonuses
+- add more stickers here and to remote hosting, change setup.php accordingly
